navigation drawer design

--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -2,35 +2,49 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view"
+
     >
 
     <group android:checkableBehavior="single"
         >
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:icon="@drawable/ic_action_home"
+            android:title="@string/menu_home"
+            />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_action_error"
             android:title="@string/menu_gallery" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_action_error"
             android:title="@string/menu_slideshow" />
         <item
             android:id="@+id/nav_tools"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/ic_action_teacher"
             android:title="@string/menu_tools" />
         <item
             android:id="@+id/nav_share"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/ic_action_student"
             android:title="@string/menu_share" />
 
         <item
+            android:id="@+id/nav_cart"
+            android:icon="@drawable/ic_action_cart"
+            android:title="Manage Cart" />
+
+        <item
+            android:id="@+id/nav_order"
+            android:icon="@drawable/ic_action_order"
+            android:title="My Orders" />
+
+        <item
             android:id="@+id/nav_send"
-            android:icon="@drawable/ic_menu_send"
+            android:icon="@drawable/ic_action_logout"
             android:title="@string/menu_send" />
+
+
 
     </group>
 
