--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     app:cardPreventCornerOverlap="false"
     android:background="@color/colorwhite"
-    tools:context=".Login">
+    tools:context=".Login"
+    android:orientation="vertical">
 
     <com.google.android.material.card.MaterialCardView
 
@@ -56,13 +57,11 @@
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="65dp"
-            android:drawableLeft="@mipmap/username2"
             android:hint="Username"
             android:padding="7dp"
              />
 
         </com.google.android.material.textfield.TextInputLayout>
-
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -77,7 +76,6 @@
             android:textColor="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="65dp"
-            android:drawableLeft="@mipmap/password"
             android:hint="Password"
             android:inputType="textPassword"
             android:padding="7dp"
@@ -96,7 +94,6 @@
             android:text="LOGIN"
             android:textColor="@color/colorwhite"
             android:textSize="25dp"
-
             app:layout_constraintCircleRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
