--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorwhite">#ffffff</color>
     <color name="colorlogo">#014EAA</color>
-
+    <color name="yellow">#FBD109</color>
 </resources>
