--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorwhite">#ffffff</color>
     <color name="colorlogo">#014EAA</color>
     <color name="yellow">#FBD109</color>
+    <color name="themeL">#25c6da</color>
 </resources>
