--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,12 +35,12 @@
     </com.google.android.material.card.MaterialCardView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorwhite"
         android:padding="30dp"
         app:layout_constraintTop_toBottomOf="@+id/icon"
-        app:layout_constraintVertical_bias="1.0"
         tools:layout_editor_absoluteX="-2dp">
 
 
@@ -51,38 +51,36 @@
             android:layout_height="wrap_content"
             android:textColorHint="@color/colorPrimary">
 
-        <EditText
-            android:backgroundTint="@color/colorPrimary"
-            android:textColor="@color/colorPrimary"
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:hint="Username"
-            android:padding="7dp"
-             />
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:backgroundTint="@color/colorPrimary"
+                android:hint="Username"
+                android:padding="7dp"
+                android:textColor="@color/colorPrimary" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
 
         <com.google.android.material.textfield.TextInputLayout
-            app:layout_constraintTop_toBottomOf="@+id/username_text_input_layout"
             android:id="@+id/password_text_input_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColorHint="@color/colorPrimary">
-        <EditText
-            android:backgroundTint="@color/colorPrimary"
-            android:id="@+id/password"
-            android:textColor="@color/colorPrimary"
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:padding="7dp"
-            />
+            android:textColorHint="@color/colorPrimary"
+            app:layout_constraintTop_toBottomOf="@+id/username_text_input_layout">
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:backgroundTint="@color/colorPrimary"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:padding="7dp"
+                android:textColor="@color/colorPrimary" />
 
         </com.google.android.material.textfield.TextInputLayout>
-
 
 
         <Button
@@ -100,7 +98,21 @@
             app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout" />
 
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_view"
+        android:layout_width="350dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="380dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/icon"
+        app:lottie_autoPlay="false"
+        app:lottie_fileName="preloader.json"
+        app:lottie_loop="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
