--- a/app/src/main/res/layout/row_teachers.xml
+++ b/app/src/main/res/layout/row_teachers.xml
@@ -17,12 +17,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:padding="10dp">
+        android:padding="16dp">
+
         <TextView
-            android:id="@+id/username"
+            android:id="@+id/name"
             android:gravity="start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:textSize="20dp"
             android:textStyle="bold"
             android:text="mohit sojitra" />
@@ -32,7 +34,7 @@
             android:id="@+id/number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/username"
+            app:layout_constraintTop_toBottomOf="@+id/name"
             android:layout_marginTop="2dp"
             android:text="kemchho" />
 
@@ -42,7 +44,7 @@
             android:gravity="end"
             android:text="Roll no here"
             app:layout_constraintEnd_toEndOf="@+id/number"
-            />
+            tools:layout_editor_absoluteY="6dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
