--- a/app/src/main/res/layout/activity_add_teacher.xml
+++ b/app/src/main/res/layout/activity_add_teacher.xml
@@ -132,5 +132,18 @@
 
     </androidx.appcompat.widget.AppCompatSpinner>
 
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/divison"
+        android:id="@+id/submit"
+        android:text="Submit"/>
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/divison"
+        app:layout_constraintLeft_toRightOf="@+id/submit"
+        android:id="@+id/cancel"
+        android:text="Cancle"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
