--- a/app/src/main/res/drawable/dottedline.xml
+++ b/app/src/main/res/drawable/dottedline.xml
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?> <shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="line">
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <solid android:color="@android:color/transparent"/>
     <stroke
-        android:color="#FF0000FF"
-        android:dashWidth="4dp"
-        android:dashGap="8dp" >
-    </stroke>
+        android:width="1px"
+        android:color="#000000"
+        android:dashGap="5px"
+        android:dashWidth="5px" />
 </shape>
