--- a/app/src/main/res/layout/manageteacher.xml
+++ b/app/src/main/res/layout/manageteacher.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/filterstudent"
+        android:id="@+id/filterteacher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -15,5 +16,6 @@
         app:srcCompat="@drawable/filter"
         android:tint="@android:color/white"
         app:backgroundTint="@color/colorPrimary" />
+
 
 </RelativeLayout>
