--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#014EAA</color>
-    <color name="colorPrimaryDark">#014EAA</color>
+    <color name="colorPrimary">#3e6ca3</color>
+    <color name="colorPrimaryDark">#3e6ca3</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorwhite">#ffffff</color>
     <color name="colorlogo">#014EAA</color>
